tests/machine/x/hs/tree_sum.error

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:21:18: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘left’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
      In an equation for ‘t’:
          t = Node
                {left = Leaf, value = 1,
                 right = Node {left = Leaf, value = 2, right = Leaf}}
   |
21 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
   |                  ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:21:43: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
      In an equation for ‘t’:
          t = Node
                {left = Leaf, value = 1,
                 right = Node {left = Leaf, value = 2, right = Leaf}}
   |
21 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:21:56: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘left’ field of a record
      In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
   |
21 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
   |                                                        ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:21:81: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘right’ field of a record
      In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
   |
21 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
   |                                                                                 ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:25:19: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the first argument of ‘sum_tree’, namely ‘t’
      In the first argument of ‘print’, namely ‘(sum_tree t)’
      In a stmt of a 'do' block: print (sum_tree t)
   |
25 |   print (sum_tree t)
   |                   ^


Context around line 21:
   19| sum_tree t = 0
   20| 
   21| t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
   22| 
   23| main :: IO ()
